--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     bottom: 0;
 
     z-index: 10;
-    background-color:#111;
+    background-color:trasparent;
 }
 
 /*  Button style from: 
