--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@ body {
     object-fit: cover; 
     z-index: 0; 
 } 
-#grid {
+#img {
     position: fixed;
   left: 0px;
   top: 0px;
-  z-index: 11;
+  z-index: 2;
    
 }      
 
