--- a/style.css
+++ b/style.css
@@ -18,16 +18,17 @@ body {
     z-index: 0; 
 } 
 #img {
-    position: fixed;
-  left: 0px;
-  top: 0px;
-  z-index: 2;
+   position: fixed;
+    background: trasparent;
+    z-index: 2;
+    top:0;
+    width: 100%;
    
 }      
 
 #gui_controls {
     position: fixed;
-    background-color: #111; /*rgba(255, 0, 0, 0.5);*/
+    background-color: transparent; /*rgba(255, 0, 0, 0.5);*/
     z-index: 2;
     bottom:0;
 }      
@@ -42,7 +43,7 @@ body {
     right: 0;
     bottom: 0;
 
-    z-index: -1;
+    z-index: 10;
     background-color:trasparent;
 }
 
